Add and style the canvas section
Created the canvas section of the webpage and styled it

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 
     <div class="canvas">
 
+            <div class="canvas-content">
+                <div class="canvas-header">
+                    This website is awesome
+                </div>
+                <div class="canvas-text">
+                    This website has some subtext that goes under the main title.It's a smaller font and the color is lower contrast
+                </div>
+                <button class="signup-btn">Sign Up</button>
+            </div>
+            <img class="side-image"src="#" alt="Image-Placeholder">
     </div>
 
     <div class="random-info">
