Add Random Info Section
Added and styled the random information section of the webpage.
Also center aligned image text (both main and cross axis) of
canvas-side-image.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,34 @@
                 </div>
                 <button class="signup-btn">Sign Up</button>
             </div>
-            <img class="side-image"src="#" alt="Image-Placeholder">
+            <img class="side-image"src="#" alt="this is a placeholder for an image">
     </div>
 
     <div class="random-info">
+               
+        <div class="random-info-header">Some Random Information.</div>
+        
+        <div class="random-info-content">
+                <div class="cards">
+                    <img class="card-image" src="#" alt="">
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
 
+                <div class="cards">
+                    <img class="card-image" src="#" alt="">
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+
+                <div class="cards">
+                    <img class="card-image" src="#" alt="">
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+
+                <div class="cards">
+                    <img class="card-image" src="#" alt="">
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+        </div>
     </div>
 
 
