--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 
 
     <div class="quote">
+        <div class="quote-section">
 
+            <div class="quote-text">This is an inspiring quote,or a testimonial from a customer.Maybe it's just filling up space,or maybe people will actually read it.Who knows?All i know is that it looks nice.</div>
+            <div class="quote-author">-Thor,God of Thunder</div>
+        </div>
     </div>
 
     <div class="signup">
@@ -70,7 +74,7 @@
     </div>
 
     <footer>
-
+        Copyright  &copy;  The Odin Project 2021
     </footer>
 </body>
 </html>
