--- a/index.html
+++ b/index.html
@@ -64,13 +64,23 @@
     <div class="quote">
         <div class="quote-section">
 
-            <div class="quote-text">This is an inspiring quote,or a testimonial from a customer.Maybe it's just filling up space,or maybe people will actually read it.Who knows?All i know is that it looks nice.</div>
-            <div class="quote-author">-Thor,God of Thunder</div>
+            <div class="quote-text">This is an inspiring quote,or a testimonial from a customer.Maybe it's just filling up space,or maybe people will actually read it.Who knows?All I know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
         </div>
     </div>
 
     <div class="signup">
+        <div class="banner">
 
+
+            <div class="banner-content">
+                    <div class="banner-header">Call to action! It's time!</div>
+                    <div class="banner-header-subtext">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+                <button class="signupbtn2">Sign Up</button>
+            </div>
     </div>
 
     <footer>
